manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ravishop-service
  labels:
    app: ravishop
spec:
  selector:
    app: ravishop
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: NodePort
